# dependency-solver

./: .coverage  .gitignore  Makefile  README.md  pyproject.toml  tox.ini
.github/workflows/: ci.yml
dependency_solver/: core.py  ui.py  visualization.py
tests/: test_core.py  test_ui.py  test_visualization.py
