[tool.poetry]
name = "dependency-solver"
version = "0.1.0"
description = "A tool for solving and visualizing project dependencies"
authors = ["Tao Cao <ai firstname lastname at gmail.com>"]
readme = "README.md"
packages = [{include = "dependency_solver"}]

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.31.0"
networkx = "^3.2"
matplotlib = "^3.8.2"
pandas = "^2.2.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
pytest-cov = "^4.1.0"
black = "^23.12.1"
isort = "^5.13.2"
flake8 = "^7.0.0"
mypy = "^1.8.0"
pytest-mock = "^3.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
dependency-solver = "dependency_solver.ui:main"